2008-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (read-file-name-function, read-file-name-predicate)
	(read-file-name-completion-ignore-case, insert-default-directory):
	New vars, moved from fileio.c.
	(read-file-name): New fun, moved from fileio.c.
	* cus-start.el: Remove insert-default-directory and
	read-file-name-completion-ignore-case.

	* Makefile.in (emacs-deps): Leave it empty.

2008-04-23  Magnus Henoch  <mange@freemail.hu>

	* tar-mode.el (tar-untar-buffer): If the entry has directory
	link type, extract it as a directory even if its file name doesn't
	end with a slash.  Fixes extraction of NetBSD tar archives.

2008-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-start): Also don't get confused by CRs since we
	don't quote them.

2008-04-12  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-init-buffer): New function.
	(gdb-set-gud-minor-mode-existing-buffers)
	(gdb-info-breakpoints-custom, gdb-get-location)
	(gdb-set-gud-minor-mode-existing-buffers-1): Use it.
	Previously gdb-create-define-alist wasn't always run and added to
	after-save-hook.

	* progmodes/gud.el (gud-tooltip-tips): Use tooltip-event-buffer

2008-04-12  Kevin Ryde  <user42@zip.com.au>

	* progmodes/make-mode.el (makefile-fill-paragraph): Treat indented
	comments like unindented ones.

2008-04-12  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-ae-open-documents): Adjust selection range
	parameter origins.

2008-04-11  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/autoload.el (autoload-generate-file-autoloads):
	Bind print-level to ensure output forms aren't truncated if
	print-level is set to eval-expression-print-level when going via
	eval-defun and friends, or has been otherwise fiddled with.

2008-04-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/cc-mode.el (c-basic-common-init): Don't set
	font-lock-extend-after-change-region-function globally.
