@@ -1,5 +1,8 @@
 2008-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* minibuffer.el (read-file-name): Don't let-bind default-directory.
+	Only abbreviate default-filename if it's a file.
+
 	* minibuffer.el (read-file-name-function, read-file-name-predicate)
 	(read-file-name-completion-ignore-case, insert-default-directory):
 	New vars, moved from fileio.c.
